--- a/homelibrary.html
+++ b/homelibrary.html
@@ -1,3 +1,29 @@
-<h>Home Library</h>
-<p> This webpage will contain all the details of the books I have in my library.</p>
-<!-- Day 1 - Learning html -->
+<!DOCTYPE html>
+<html>
+  <main>
+    <head>
+  <h1> Home Library</h1>
+    <!-- The functions will increase as the webpage is updated -->
+    </head>
+    <body>
+  <p> The project is to list to all the books in my home library. The page will contain book's name, author's name, category - whether its fiction or non fiction.
+    <!-- An image of a book -->
+    <img src="https://images.unsplash.com/photo-1517594321692-b9ac1abbdd12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="An opened book with a specs on it">
+      <h1 id="List of Books"> List of books</h1>
+      
+      <ol><li> Catcher in the Rye</li>
+        <li>To kill a mocking bird</li>
+      </ol>
+      <form> How many books do yo read in a month?
+      <label for="zero">
+        <input id="zero" type="radio" value="zero"name="number"checked>0</label>
+        <label for="one">
+      <input id="one" type="radio" value="one"name="number">1 </label>
+        <label for="two plus">
+          <input id ="two plus"type="radio"value="two plus"name="number">2 or more
+          </form></p>
+          <p>Enter your favourite book <input type="text" name="name" button type p="Submit"placeholder="Enter here"></p>
+          <p><a href="#List of Books"> Back to List of Books</a></p>
+          </body>
+          </main>
+          </html>
