--- a/homelibrary.html
+++ b/homelibrary.html
@@ -2,11 +2,19 @@
 <html>
   <main>
     <head>
-  <h1> Home Library</h1>
+<!-- Changing the font color of heading h1 to blue-->
+  <h1 style="color:blue;"> Home Library</h1>
     <!-- The functions will increase as the webpage is updated -->
+      <!-- An heading stating the initative and introdcing a class -->
+      <style>
+        .greentext{color:green;font-size:12;}</style>
+      <h2 class="greentext">An initiative to learn HTML.</h2>
     </head>
     <body>
-  <p> The project is to list to all the books in my home library. The page will contain book's name, author's name, category - whether its fiction or non fiction.
+      <!-- Changing the font color of paragraph p to grey-->
+      <style>
+        p1{color:grey;}</style>
+  <p1> The project is to list to all the books in my home library. The page will contain book's name, author's name, category - whether its fiction or non fiction.
     <!-- An image of a book -->
     <img src="https://images.unsplash.com/photo-1517594321692-b9ac1abbdd12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="An opened book with a specs on it">
       <h1 id="List of Books"> List of books</h1>
@@ -21,7 +29,7 @@
       <input id="one" type="radio" value="one"name="number">1 </label>
         <label for="two plus">
           <input id ="two plus"type="radio"value="two plus"name="number">2 or more
-          </form></p>
+          </form></p1>
           <p>Enter your favourite book <input type="text" name="name" button type p="Submit"placeholder="Enter here"></p>
           <p><a href="#List of Books"> Back to List of Books</a></p>
           </body>
