--- a/homelibrary.html
+++ b/homelibrary.html
@@ -13,9 +13,11 @@
                             border-color:green;
                             border-width:50px;
                             border-style:solid;
+          border-radius:10px;
                           }
         .greentext{color:green;font-size:12;}
-        .large-image{width:300px;}</style>
+        .large-image{width:300px;border-radius:50%}
+      .silver-background{background-color:silver;}</style>
       <h2 class="greentext">An initiative to learn HTML.</h2>
     </head>
     <body>
@@ -25,7 +27,8 @@
   <p1> The project is to list to all the books in my home library. The page will contain book's name, author's name, category - whether its fiction or non fiction.
     <!-- An image of a book -->
     <img src="https://images.unsplash.com/photo-1517594321692-b9ac1abbdd12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="An opened book with a specs on it" class="large-image thin-green-border">
-      <h1 id="List of Books" > List of books</h1>
+    div<class="silver-background">  
+    <h1 id="List of Books" > List of books</h1>
       
       <ol><li> Catcher in the Rye</li>
         <li>To kill a mocking bird</li>
