--- a/homelibrary.html
+++ b/homelibrary.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <main>
-    <head>
+<html lang="en-us">
+<main>
+<head>
 <!-- Changing the font color of heading h1 to blue-->
-  <h1 style="color:blue;"> Home Library</h1>
-    <!-- The functions will increase as the webpage is updated -->
-      <!-- An heading stating the initative and introdcing a class -->
-       <!-- A class for a specified width image-->
-      <!-- A class for CSS border -->
-      <style>
-        .thin-green-border{
+  
+<h1 style="color:blue;"> Home Library</h1>
+<!-- The functions will increase as the webpage is updated -->
+<!-- An heading stating the initative and introdcing a class -->
+<!-- A class for a specified width image-->
+<!-- A class for CSS border -->
+ <style>
+ .thin-green-border{
                             border-color:green;
                             border-width:50px;
                             border-style:solid;
