--- a/homelibrary.html
+++ b/homelibrary.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <main>
-<head>
+  <head><title> HL</title>
 <!-- Changing the font color of heading h1 to blue-->
   
 <h1 style="color:blue;"> Home Library</h1>
@@ -10,40 +10,38 @@
 <!-- A class for a specified width image-->
 <!-- A class for CSS border -->
  <style>
- .thin-green-border{
-                            border-color:green;
-                            border-width:50px;
-                            border-style:solid;
-          border-radius:10px;
-                          }
-        .greentext{color:green;font-size:12;}
-        .large-image{width:300px;border-radius:50%}
-      .silver-background{background-color:silver;}</style>
-      <h2 class="greentext">An initiative to learn HTML.</h2>
-    </head>
-    <body>
-      <!-- Changing the font color of paragraph p to grey-->
-      <style>
-        p1{color:grey;}</style>
-  <p1> The project is to list to all the books in my home library. The page will contain book's name, author's name, category - whether its fiction or non fiction.
-    <!-- An image of a book -->
-    <img src="https://images.unsplash.com/photo-1517594321692-b9ac1abbdd12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="An opened book with a specs on it" class="large-image thin-green-border">
-    div<class="silver-background">  
-    <h1 id="List of Books" > List of books</h1>
+.thin-green-border{border-color:green;
+                   border-width:50px;
+                   border-style:solid;
+                   border-radius:10px;
+                   }        
+.greentext{color:green;font-size:12;}
+.large-image{width:300px;border-radius:50%}
+.silver-background{background-color:silver;}</style>
+<h2 class="greentext">An initiative to learn HTML.</h2>
+<body>
+<!-- Changing the font color of paragraph p to grey-->
+<style>
+p1{color:grey;}</style>
+<p1> The project is to list to all the books in my home library. The page will contain book's name, author's name, category - whether its fiction or non fiction.
+<!-- An image of a book -->
+<img src="https://images.unsplash.com/photo-1517594321692-b9ac1abbdd12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="An opened book with a specs on it" class="large-image thin-green-border">
+div<class="silver-background">  
+<h1 id="List of Books" > List of books</h1>
       
-      <ol><li> Catcher in the Rye</li>
-        <li>To kill a mocking bird</li>
-      </ol>
-      <form> How many books do yo read in a month?
-      <label for="zero">
-        <input id="zero" type="radio" value="zero"name="number"checked>0</label>
-        <label for="one">
-      <input id="one" type="radio" value="one"name="number">1 </label>
-        <label for="two plus">
-          <input id ="two plus"type="radio"value="two plus"name="number">2 or more
-          </form></p1>
-          <p>Enter your favourite book <input type="text" name="name" button type p="Submit"placeholder="Enter here"></p>
-          <p><a href="#List of Books"> Back to List of Books</a></p>
-          </body>
-          </main>
-          </html>
+ <ol><li> Catcher in the Rye</li>
+ <li>To kill a mocking bird</li>
+ </ol>
+ <form> How many books do yo read in a month?
+ <label for="zero">
+ <input id="zero" type="radio" value="zero"name="number"checked>0</label>
+ <label for="one">
+ <input id="one" type="radio" value="one"name="number">1 </label>
+ <label for="two plus">
+ <input id ="two plus"type="radio"value="two plus"name="number">2 or more
+ </form></p1>
+ <p>Enter your favourite book <input type="text" name="name" button type p="Submit"placeholder="Enter here"></p>
+ <p><a href="#List of Books"> Back to List of Books</a></p>
+ </body>
+ </main>
+ </html>
