--- a/homelibrary.html
+++ b/homelibrary.html
@@ -10,16 +10,17 @@
 <!-- A class for a specified width image-->
 <!-- A class for CSS border -->
  <style>
-.thin-green-border{border-color:green;
+   body{background-color:blue;}
+  .thin-green-border{border-color:green;
                    border-width:50px;
                    border-style:solid;
                    border-radius:10px;
                    }        
-.greentext{color:green;font-size:12;}
-.large-image{width:300px;border-radius:50%}
-.silver-background{background-color:silver;}</style>
+  .greentext{color:green;font-size:12;}
+  .large-image{width:300px;border-radius:50%}
+  .silver-background{background-color:silver;}</style>
 <h2 class="greentext">An initiative to learn HTML.</h2>
-<body>
+<body?
 <!-- Changing the font color of paragraph p to grey-->
 <style>
 p1{color:grey;}</style>
