--- a/homelibrary.html
+++ b/homelibrary.html
@@ -20,7 +20,7 @@
   .large-image{width:300px;border-radius:50%}
   .silver-background{background-color:silver;}</style>
 <h2 class="greentext">An initiative to learn HTML.</h2>
-<body?
+<body>
 <!-- Changing the font color of paragraph p to grey-->
 <style>
 p1{color:grey;}</style>
