--- a/homelibrary.html
+++ b/homelibrary.html
@@ -11,14 +11,14 @@
 <!-- A class for CSS border -->
  <style>
    body{background-color:blue;}
-  .thin-green-border{border-color:green;
+  .thin-green-border{border-color:#ff9809;
                    border-width:50px;
                    border-style:solid;
                    border-radius:10px;
                    }        
   .greentext{color:green;font-size:12;}
   .large-image{width:300px;border-radius:50%}
-  .silver-background{background-color:silver;}</style>
+  .silver-background{background-color:r,g,b(12,45,122);}</style>
 <h2 class="greentext">An initiative to learn HTML.</h2>
 <body>
 <!-- Changing the font color of paragraph p to grey-->
