--- a/homelibrary.html
+++ b/homelibrary.html
@@ -4,7 +4,7 @@
   <head><title> HL</title>
 <!-- Changing the font color of heading h1 to blue-->
   
-<h1 style="color:blue;"> Home Library</h1>
+<h1 style="color:green;"> Home Library</h1>
 <!-- The functions will increase as the webpage is updated -->
 <!-- An heading stating the initative and introdcing a class -->
 <!-- A class for a specified width image-->
@@ -16,7 +16,7 @@
                    border-style:solid;
                    border-radius:10px;
                    }        
-  .greentext{color:green;font-size:12;}
+  .greentext{color:green;font-size:20;}
   .large-image{width:300px;border-radius:50%}
   .silver-background{background-color:r,g,b(12,45,122);}</style>
 <h2 class="greentext">An initiative to learn HTML.</h2>
