--- a/homelibrary.html
+++ b/homelibrary.html
@@ -30,9 +30,9 @@ p1{color:grey;}</style>
 div<class="silver-background">  
 <h1 id="List of Books" > List of books</h1>
       
- <ol><li> Catcher in the Rye</li>
+ <strong><ol><li> Catcher in the Rye</li>
  <li>To kill a mocking bird</li>
-   <li>Hundred Years Of Solitude</li>
+   <li>Hundred Years Of Solitude</li></strong>
  </ol>
  <form> How many books do yo read in a month?
  <label for="zero">
