--- a/homelibrary.html
+++ b/homelibrary.html
@@ -18,7 +18,7 @@
                    }        
   .greentext{color:green;font-size:20;}
   .large-image{width:300px;border-radius:50%}
-  .silver-background{background-color:r,g,b(12,45,122);}</style>
+  .silver-background{background-color:r,g,b,a(12,45,122,0.2);}</style>
 <h2 class="greentext">An initiative to learn HTML.</h2>
 <body>
 <!-- Changing the font color of paragraph p to grey-->
