--- a/homelibrary.html
+++ b/homelibrary.html
@@ -15,6 +15,7 @@
                    border-width:50px;
                    border-style:solid;
                    border-radius:10px;
+                   opacity:0.9;
                    }        
   .greentext{color:green;font-size:20;}
   .large-image{width:300px;border-radius:50%}
